--- a/Equation_of_motion/Project.toml
+++ b/Equation_of_motion/Project.toml
@@ -2,3 +2,6 @@ name = "Equation_of_motion"
 uuid = "a5dc6ae2-aa51-47b5-b10c-9cf9fc113779"
 authors = ["Tatsuki Tomita <tomita.tatsuki725@gmail.com>"]
 version = "0.1.0"
+
+[deps]
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
